finished user dashboard

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -60,7 +60,7 @@
     "USER_EMAIL": "Deine E-Mail",
     "USER_PASSWORD": "Ihr Passwort",
     "WBESITE": "Webseite",
-    "ZIP": "POSTLEITZAHL",
+    "ZIP": "Postleitzahl",
     "PASSWORD": "Passwort",
     "DESCRIPTION": "Beschreibung"
   },
