wip cleanup functions

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -24,7 +24,7 @@
     "SEARCH_PHOTOGRAPHER": "Fotograf in Ihrer Nähe",
     "SEARCH_EVENTS": "Veranstaltungen",
     "SIGNIN": "Anmelden",
-    "SIGNUP": "Anmelden",
+    "SIGNUP": "Registrieren",
     "CONTACT_DETAILS": "Kontakt details",
     "PAYMENT_DELIVERY": "Zahlung / Lieferung",
     "TESTIMONIAL": "Referenzen",
@@ -114,8 +114,8 @@
     "PRICES": "Preise",
     "RESET_PASSWORD": "Passwort zurücksetzen",
     "SIGN_IN_WITH": "oder Anmelden mit:",
-    "SIGN_UP_WITH": "Oder Anmeldung mit:",
-    "SIGN_UP": "Anmelden",
+    "SIGN_UP_WITH": "Oder Registrieren mit:",
+    "SIGN_UP": "Registrieren",
     "SIGNUP_AS_PHOTOGRAPHER": "Melde dich als neuer Fotograf an",
     "SIGNUP_AS_USER": "Melden Sie sich als neuer Benutzer an",
     "TESTIMONIALS": "Kundenstimmen",
