Translation/CSS/Bugs

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
     "ADMIN": "Administrator",
     "DATE": "Datum",
     "EDIT": "Bearbeiten",
-    "EMAIL": "Email",
+    "EMAIL": "E-Mail",
     "LOCATION": "Ort",
     "NAME": "Name",
     "PHOTOGRAPHER": "Fotograf",
@@ -15,20 +15,20 @@
   },
   "NAV": {
     "DASHBOARD": "Dashboard",
-    "FEATURES": "Features",
+    "FEATURES": "Funktionen",
     "PRICES": "Preise",
     "DESCRIPTION": "Beschreibung",
-    "HOME": "Zuhause",
+    "HOME": "Start",
     "LOGOUT": "Ausloggen",
-    "EVENTS": "Veranstaltungen",
-    "SEARCH_PHOTOGRAPHER": "Fotograf in Ihrer Nähe",
-    "SEARCH_EVENTS": "Veranstaltungen",
+    "EVENTS": "Events",
+    "SEARCH_PHOTOGRAPHER": "Fotografen in Ihrer Nähe",
+    "SEARCH_EVENTS": "Events",
     "SIGNIN": "Anmelden",
-    "SIGNUP": "Anmelden",
-    "CONTACT_DETAILS": "Kontakt details",
-    "PAYMENT_DELIVERY": "Zahlung / Lieferung",
+    "SIGNUP": "Registrieren",
+    "CONTACT_DETAILS": "Kontaktdaten",
+    "PAYMENT_DELIVERY": "Zahlung/Lieferung",
     "TESTIMONIAL": "Referenzen",
-    "CHECK_ORDER": "Prüfe die Reihenfolge",
+    "CHECK_ORDER": "Reihenfolge prüfen",
     "CART_QUANTITY": "Menge",
     "CART_PICTURE": "Bild",
     "CART_SIZE": "Größe",
@@ -37,90 +37,90 @@
     "CART_ITEM": "Artikel"
   },
   "INPUTS": {
-    "ABOUT_YOU": "Über dich",
+    "ABOUT_YOU": "Über Sie",
     "ACCOUNT_OWNER": "Kontoinhaber",
     "BIC": "BIC",
     "CITY": "Stadt",
     "COMPANY": "Unternehmen",
     "CONFIRM_PASSWORD": "Bestätigen Sie Ihr Passwort",
-    "CONTACT_EMAIL": "Kontakt E-mail",
+    "CONTACT_EMAIL": "E-Mail-Adresse",
     "DISPLAY_NAME": "Angezeigter Name",
-    "EMAIL": "Email",
-    "FACEBOOK_PROFILE": "Facebook Profil",
+    "EMAIL": "E-Mail",
+    "FACEBOOK_PROFILE": "Facebook-Profil",
     "IBAN": "IBAN",
     "INSTAGRAM_PROFILE": "Instagram-Profil",
-    "LASTNAME": "Familienname, Nachname",
+    "LASTNAME": "Nachname",
     "NAME": "Name",
     "PHONE": "Telefon",
     "PROFILE_URL": "Profil-URL",
     "STREET_NUMBER": "Hausnummer",
     "STREET": "Straße",
-    "TUMBLER_PROFILE": "Tumblerprofil",
+    "TUMBLER_PROFILE": "Tumbler-Profil",
     "TWITTER_PROFILE": "Twitter-Profil",
-    "USER_EMAIL": "Deine E-Mail",
+    "USER_EMAIL": "Ihre E-Mail",
     "USER_PASSWORD": "Ihr Passwort",
     "WBESITE": "Webseite",
-    "ZIP": "POSTLEITZAHL",
+    "ZIP": "Postleitzahl",
     "PASSWORD": "Passwort",
     "DESCRIPTION": "Beschreibung"
   },
   "BUTTONS": {
     "LOGIN": "Anmelden",
     "UPDATE_PROFILE": "Profil aktualisieren",
-    "SAVE": "sparen",
+    "SAVE": "Speichern",
     "UPDATE_EVENT": "Ereignis aktualisieren",
-    "UPDATE_USER": "Benutzer aktualisieren",
+    "UPDATE_USER": "Benutzerdaten aktualisieren",
     "CANCEL": "Stornieren",
     "RESET_PASSWORD": "Passwort zurücksetzen",
-    "CONTINUE_SHOPPING": "Mit dem Einkaufen fortfahren",
+    "CONTINUE_SHOPPING": "Einkauf fortsetzen",
     "PROCEED_TO_CHECKOUT": "Zur Kasse",
     "BACK": "Zurück",
     "NEXT": "Weiter",
     "SEND_ORDER": "Jetzt bestellen",
-    "ABO": "Kaufe jetzt",
-    "SELECT_PICTURES": "Wähle alle Bilder aus",
-    "DESELECT_PICTURES": "Deaktivieren Sie alle Bilder",
-    "ADD_PICTURES_TO_CART": "Fügen Sie ausgewählte Bilder zum Warenkorb hinzu",
+    "ABO": "Jetzt bestellen",
+    "SELECT_PICTURES": "Alle Bilder auswählen",
+    "DESELECT_PICTURES": "Alle Bilder abwählen",
+    "ADD_PICTURES_TO_CART": "Ausgewählte Bilder zum Warenkorb hinzufügen",
     "START_UPLOAD": "Upload starten",
-    "DELETE_EVENT": "Ereignis löschen",
+    "DELETE_EVENT": "Event löschen",
     "SINGUP_NOW": "Jetzt registrieren",
-    "FIND_EVENT": "Finden Sie Ihre Veranstaltung",
+    "FIND_EVENT": "Finden Sie Ihre Events",
     "ADD_TO_SHOPPING_CART": "Zum Warenkorb hinzufügen",
     "SEND_REPORT": "Bericht senden",
-    "SUBMIT": "einreichen"
+    "SUBMIT": "Abschicken"
   },
   "LABELS": {
     "ADDRESS": "Adresse",
     "ACCOUNT_DATA": "Kontodaten",
     "BILLING_ADDRESS": "Rechnungsadresse",
-    "BILLING_INFORMATION": "Abrechnungsdaten",
+    "BILLING_INFORMATION": "Rechnungsdaten",
     "COMMENT": "Ihr Kommentar:",
     "CUSTOMER_RATING": "Kundenbewertung",
-    "CREATE_NEW_EVENT": "Erstellen Sie ein neues Ereignis",
+    "CREATE_NEW_EVENT": "Neues Event anlegen",
     "CREATE": "Erstellen",
-    "CONTACT_DETAILS": "Kontakt details",
+    "CONTACT_DETAILS": "Kontaktdetails",
     "DELIVERY_ADDRESS": "Lieferadresse",
-    "EVENT_DATE": "Veranstaltungsdatum",
-    "EVENT_LOCATION": "Veranstaltungsort",
-    "EVENT_NAME": "Veranstaltungsname",
+    "EVENT_DATE": "Datum des Events",
+    "EVENT_LOCATION": "Ort des Events",
+    "EVENT_NAME": "Name des Events",
     "FORGOT_PASSWORD": "Passwort vergessen?",
     "LOGIN": "Anmelden",
-    "NO_MEMBER": "Kein Mitglied?",
+    "NO_MEMBER": "Noch kein Mitglied?",
     "ORDER_DETAILS": "Bestellübersicht",
     "PAYMENT_METHOD": "Bezahlverfahren",
     "PAYMENT_SHIPPING_DETAILS": "Zahlung und Versandart",
-    "RATING": "Deine Bewertung:",
+    "RATING": "Ihre Bewertung:",
     "PUBLIC_PROFILE": "Öffentliches Profil",
     "PRICES": "Preise",
     "RESET_PASSWORD": "Passwort zurücksetzen",
     "SIGN_IN_WITH": "oder Anmelden mit:",
-    "SIGN_UP_WITH": "Oder Anmeldung mit:",
-    "SIGN_UP": "Anmelden",
-    "SIGNUP_AS_PHOTOGRAPHER": "Melde dich als neuer Fotograf an",
-    "SIGNUP_AS_USER": "Melden Sie sich als neuer Benutzer an",
-    "TESTIMONIALS": "Kundenstimmen",
-    "EDIT_EVENT": "Veranstaltung bearbeiten",
-    "EDIT_USER": "Benutzer bearbeiten",
+    "SIGN_UP_WITH": "oder Registrieren mit:",
+    "SIGN_UP": "Registrieren",
+    "SIGNUP_AS_PHOTOGRAPHER": "Als neuen Fotograf registrieren",
+    "SIGNUP_AS_USER": "Als neuen Benutzer registrieren",
+    "TESTIMONIALS": "Kundenbewertungen",
+    "EDIT_EVENT": "Event bearbeiten",
+    "EDIT_USER": "Benutzerdaten bearbeiten",
     "CART_QUANTITY": "Menge",
     "CART_PICTURE": "Bild",
     "CART_SIZE": "Größe",
@@ -132,20 +132,20 @@
     "EVENT_PASSWORD": "Passwort",
     "PHOTOGRAPHER": "Fotograf",
     "EVENT_GUEST": "Gast",
-    "EVENT_ORGANISATOR": "Veranstaltungsorganisator",
+    "EVENT_ORGANISATOR": "Eventorganisator",
     "REPORT_IMAGE": "Bild melden",
-    "TYPE_HERE": "Geben Sie hier ein",
+    "TYPE_HERE": "Hier eingeben",
     "IMAGE_VIEW": "Bildansicht",
     "FORMAT": "Format",
     "PRICE": "Preis",
-    "PREVIOUS": "Bisherige",
-    "NEXT": "Nächster",
+    "PREVIOUS": "Vorheriges",
+    "NEXT": "Nächstes",
     "PASSWORD": "Passwort",
     "DELIVERY_COSTS": "Lieferkosten",
     "IMPRINT": "Impressum",
     "DATA_PROTECTION": "Datenschutz",
-    "GTC": "Geschäftsbedingungen",
-    "EVENT_URL": "Ereignis-URL",
+    "GTC": "AGB",
+    "EVENT_URL": "Event-URL",
     "PRINT": "Drucken",
     "DOWNLOAD": "Herunterladen"
   },
@@ -159,45 +159,45 @@
   },
   "TEXTS": {
     "PASSWORT_RESET_MODAL":
-      "Zu welcher E-Mail-Adresse sollte die E-Mail zum Zurücksetzen des Passworts gesendet werden?",
-    "PROVIDE_VALID_EMAIL": "Bitte geben Sie eine gültige E-Mail-Adresse an",
-    "PROVIDE_VALID_PASSWORD": "Bitte geben Sie ein gültiges Passwort an",
-    "PROVIDE_VALID_URL": "Bitte geben Sie eine gültige URL an",
+      "Zu welcher E-Mail-Adresse soll die E-Mail zum Zurücksetzen des Passworts gesendet werden?",
+    "PROVIDE_VALID_EMAIL": "Bitte geben Sie eine gültige E-Mail-Adresse ein",
+    "PROVIDE_VALID_PASSWORD": "Bitte geben Sie ein gültiges Passwort ein",
+    "PROVIDE_VALID_URL": "Bitte geben Sie eine gültige URL ein",
     "LANDING_BESTPICTURES": "Unsere besten Bilder",
     "PAGE_NOT_FOUND": "Nun, das haben wir nicht erwartet!",
     "PAGE_NOT_FOUND_DESCRIPTION":
-      "Es sieht so aus, als hätte jemand die Objektivkappe auf ...",
-    "PRICING_TITLE": "Preisleitfaden",
-    "PRICING_GET_STARTED": "Loslegen",
+      "Sieht so aus, als hätte jemand die Objektivkappe nicht abgenommen...",
+    "PRICING_TITLE": "Preise",
+    "PRICING_GET_STARTED": "Starten Sie jetzt",
     "PRICING_DESCRIPTION":
-      "mit deinem ersten kostenlosen Album oder Upgrade auf einen unserer Pläne.",
-    "PRICING_MONTH": "Ereignisse pro Monat",
+      "mit dem ersten kostenlosen Event oder einem der Abonnements.",
+    "PRICING_MONTH": "Events pro Monat",
     "PRICING_MONTHLY": "Monat",
-    "PRICING_PICTURE_AMOUNT": "Bilder pro Album",
+    "PRICING_PICTURE_AMOUNT": "Bilder pro Event",
     "PRICING_CANCEL": "Monatlich stornierbar",
-    "SEARCH_PHOTOGRAPHER": "Suche den Fotografen per ZIP",
+    "SEARCH_PHOTOGRAPHER": "Fotografen per Postleitzahl suchen",
     "EVENT_ALL_PICTURES": "Alle Bilder",
     "EVENT_SELECTED_PICTURES": "Ausgewählte Bilder",
-    "SEARCH_PICTURES": "Suche nach Bildern nach Namen",
-    "PRICING_ADDITIONAL": "Ein Premium-Mitglied werden",
+    "SEARCH_PICTURES": "Suche Bildern nach Namen",
+    "PRICING_ADDITIONAL": "Premium-Mitglied werden",
     "PRICING_LIST_POSITION":
-      "Bei einem Upgrade auf ein Premium-Konto wird der Fotograf immer auf der ersten Position der Fotografen in der Nähe aufgeführt.",
-    "PRICING_MORE_ATTENTION": "Erhalten Sie mehr Aufmerksamkeit von Kunden",
-    "PRICING_FIRST_POSITION": "Sei immer auf der ersten Position",
-    "NO_PHOTOGRAPHERS_FOUND": "In deiner Gegend gibt es keine Fotografen",
-    "NO_EVENTS_FOUND": "Keine Veranstaltungen gefunden",
-    "DESCRIBE_REPORT": "Beschreibe, warum du dieses Bild melden möchtest",
-    "SEARCH_BY_NAME": "Suche mit Name",
+      "Bei einem Upgrade auf ein Premiumabonnement werden Sie als Fotograf immer an erster Stelle der Fotografensuche aufgelistet.",
+    "PRICING_MORE_ATTENTION": "Erhalten Sie mehr Aufmerksamkeit",
+    "PRICING_FIRST_POSITION": "Seien Sie der erste Suchvorschlag",
+    "NO_PHOTOGRAPHERS_FOUND": "In Ihrer Gegend gibt es keine Fotografen",
+    "NO_EVENTS_FOUND": "Keine Events gefunden",
+    "DESCRIBE_REPORT": "Beschreiben Sie, warum Sie dieses Bild melden möchten",
+    "SEARCH_BY_NAME": "Suche nach Namen",
     "SEARCH_BY_ID": "Suche nach ID",
-    "SEARCH_EVENT_BY_NAME": "Suche Veranstaltung nach Name",
-    "SEARCH_EVENT_BY_ID": "Suche Veranstaltung nach ID",
+    "SEARCH_EVENT_BY_NAME": "Events nach Namen suchen",
+    "SEARCH_EVENT_BY_ID": "Events nach ID suchen",
     "PAYMENT_SUCCESSFULL": "Zahlung erfolgreich!",
-    "VISIT_PHOTOGRAPHERS_PAGE": "Besuchen Sie die Fotografen Seite"
+    "VISIT_PHOTOGRAPHERS_PAGE": "Besuchen Sie die Seite des Fotografen"
   },
   "TABS": {
     "EDIT_IMAGES": "Bilder bearbeiten",
-    "EVENT_SETTINGS": "Ereigniseinstellungen",
-    "EVENTS": "Veranstaltungen",
+    "EVENT_SETTINGS": "Event anlegen",
+    "EVENTS": "Events",
     "GALLERY": "Galerie",
     "PRINTING_HOUSES": "Druckerei",
     "PROFILE": "Profil",
@@ -217,12 +217,12 @@
     "auth/invalid-api-key": "Ungültiger API-Schlüssel",
     "auth/invalid-credential": "Ungültige Anmeldeinformationen",
     "auth/invalid-email": "Ungültige E-Mail",
-    "auth/invalid-user-token": "Ungültiger Benutzer toke",
+    "auth/invalid-user-token": "Ungültiger Benutzer-Token",
     "auth/invalid-verification-code": "Ungültiger Bestätigungscode",
     "auth/invalid-verification-id": "Ungültige Verifizierungs-ID",
     "auth/network-request-failed": "Die Netzwerkanfrage ist fehlgeschlagen",
     "auth/operation-not-allowed": "Operation nicht erlaubt",
-    "auth/requires-recent-login": "Erfordert die letzte Anmeldung",
+    "auth/requires-recent-login": "Erfordert aktive Anmeldung",
     "auth/too-many-requests": "Zu viele Anfragen",
     "auth/unauthorized-domain": "Nicht autorisierte Domain",
     "auth/user-disabled": "Benutzer deaktiviert",
