--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "ADMIN": "Admin",
     "DATE": "Date",
     "EDIT": "Edit",
-    "EMAIL": "Email",
+    "EMAIL": "E-Mail",
     "LOCATION": "Location",
     "NAME": "Name",
     "PHOTOGRAPHER": "Photographer",
@@ -21,7 +21,7 @@
     "HOME": "Home",
     "LOGOUT": "Log out",
     "EVENTS": "Events",
-    "SEARCH_PHOTOGRAPHER": "Photographer near you",
+    "SEARCH_PHOTOGRAPHER": "Photographers near you",
     "SEARCH_EVENTS": "Events",
     "SIGNIN": "Sign in",
     "SIGNUP": "Sign up",
@@ -45,7 +45,7 @@
     "CONFIRM_PASSWORD": "Confirm your password",
     "CONTACT_EMAIL": "Contact E-Mail",
     "DISPLAY_NAME": "Displayed name",
-    "EMAIL": "Email",
+    "EMAIL": "E-Mail",
     "FACEBOOK_PROFILE": "Facebook profile",
     "IBAN": "IBAN",
     "INSTAGRAM_PROFILE": "Instagram profile",
@@ -83,19 +83,19 @@
     "ADD_PICTURES_TO_CART": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
     "DELETE_EVENT": "Delete Event",
-    "SINGUP_NOW": "Sign up Now",
+    "SINGUP_NOW": "Sign up now",
     "FIND_EVENT": "Find your event",
     "ADD_TO_SHOPPING_CART": "Add to shopping cart",
-    "SEND_REPORT": "Send Report",
+    "SEND_REPORT": "Send report",
     "SUBMIT": "Submit"
   },
   "LABELS": {
     "ADDRESS": "Address",
-    "ACCOUNT_DATA": "Account Data",
-    "BILLING_ADDRESS": "Billing Address",
-    "BILLING_INFORMATION": "Billing Information",
+    "ACCOUNT_DATA": "Account data",
+    "BILLING_ADDRESS": "Billing address",
+    "BILLING_INFORMATION": "Billing information",
     "COMMENT": "Your comment:",
-    "CUSTOMER_RATING": "Customer Rating",
+    "CUSTOMER_RATING": "Customer rating",
     "CREATE_NEW_EVENT": "Create new event",
     "CREATE": "Create",
     "CONTACT_DETAILS": "Contact-Details",
@@ -103,19 +103,19 @@
     "EVENT_DATE": "Event date",
     "EVENT_LOCATION": "Event location",
     "EVENT_NAME": "Event name",
-    "FORGOT_PASSWORD": "Forgot Password?",
+    "FORGOT_PASSWORD": "Forgot password?",
     "LOGIN": "Sign in",
     "NO_MEMBER": "Not a member?",
-    "ORDER_DETAILS": "Order Overview",
-    "PAYMENT_METHOD": "Payment Method",
-    "PAYMENT_SHIPPING_DETAILS": "Payment and Shipping Method",
+    "ORDER_DETAILS": "Order overview",
+    "PAYMENT_METHOD": "Payment method",
+    "PAYMENT_SHIPPING_DETAILS": "Payment and shipping method",
     "RATING": "Your rating:",
-    "PUBLIC_PROFILE": "Public Profile",
+    "PUBLIC_PROFILE": "Public profile",
     "PRICES": "Prices",
-    "RESET_PASSWORD": "Reset Password",
-    "SIGN_IN_WITH": "or Sign in with:",
-    "SIGN_UP_WITH": "Or Signup with:",
-    "SIGN_UP": "Sign Up",
+    "RESET_PASSWORD": "Reset password",
+    "SIGN_IN_WITH": "Or sign in with:",
+    "SIGN_UP_WITH": "Or sign up with:",
+    "SIGN_UP": "Sign up",
     "SIGNUP_AS_PHOTOGRAPHER": "Signup as new photographer",
     "SIGNUP_AS_USER": "Signup as new user",
     "TESTIMONIALS": "Customer Voices",
@@ -132,16 +132,16 @@
     "EVENT_PASSWORD": "Password",
     "PHOTOGRAPHER": "Photographer",
     "EVENT_GUEST": "Guest",
-    "EVENT_ORGANISATOR": "Event Organisator",
-    "REPORT_IMAGE": "Report Image",
-    "TYPE_HERE": "Type Here",
-    "IMAGE_VIEW": "Image View",
+    "EVENT_ORGANISATOR": "Event organisator",
+    "REPORT_IMAGE": "Report image",
+    "TYPE_HERE": "Type here",
+    "IMAGE_VIEW": "Image view",
     "FORMAT": "Format",
     "PRICE": "Price",
     "PREVIOUS": "Previous",
     "NEXT": "Next",
     "PASSWORD": "Password",
-    "DELIVERY_COSTS": "Lieferkosten",
+    "DELIVERY_COSTS": "Delivery cost",
     "IMPRINT": "Imprint",
     "DATA_PROTECTION": "Data protection",
     "GTC": "Terms and conditions",
@@ -159,8 +159,8 @@
   },
   "TEXTS": {
     "PASSWORT_RESET_MODAL":
-      "To which email address should the password reset email be sent?",
-    "PROVIDE_VALID_EMAIL": "Please provide a valid email",
+      "To which E-Mail address should the password reset E-Mail be sent?",
+    "PROVIDE_VALID_EMAIL": "Please provide a valid E-Mail",
     "PROVIDE_VALID_PASSWORD": "Please provide a valid password",
     "PROVIDE_VALID_URL": "Please provide a valid URL",
     "LANDING_BESTPICTURES": "Our best pictures",
@@ -169,10 +169,10 @@
     "PRICING_TITLE": "Pricing Guide",
     "PRICING_GET_STARTED": "Get started",
     "PRICING_DESCRIPTION":
-      "with your first free album or upgrade to one of our plans.",
+      "with your first free event or upgrade to one of our plans.",
     "PRICING_MONTH": "events per month",
     "PRICING_MONTHLY": "month",
-    "PRICING_PICTURE_AMOUNT": "pictures per album",
+    "PRICING_PICTURE_AMOUNT": "pictures per event",
     "PRICING_CANCEL": "Monthly cancellable",
     "SEARCH_PHOTOGRAPHER": "Search photographer by ZIP",
     "EVENT_ALL_PICTURES": "All pictures",
@@ -216,7 +216,7 @@
     "auth/invalid-api-key": "Invalid API key",
     "auth/invalid-credential": "Invalid credential",
     "auth/invalid-email": "Invalid E-Mail",
-    "auth/invalid-user-token": "Invalid user toke",
+    "auth/invalid-user-token": "Invalid user token",
     "auth/invalid-verification-code": "Invalid verification code",
     "auth/invalid-verification-id": "Invalid verifivation ID",
     "auth/network-request-failed": "Network request failed",
