--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,7 +18,7 @@
     "FEATURES": "Funktionen",
     "PRICES": "Preise",
     "DESCRIPTION": "Beschreibung",
-    "HOME": "Start",
+    "HOME": "Home",
     "LOGOUT": "Ausloggen",
     "EVENTS": "Events",
     "SEARCH_PHOTOGRAPHER": "Fotografen in Ihrer Nähe",
